# obc_adcs_solution

./: README.md  tlm_1757095318.csv
adcs_app/: CMakeLists.txt  Makefile
adcs_app/src/: adcs.cpp  adcs.hpp  main.cpp  math_quat.hpp  udp_link.cpp  udp_link.hpp
scripts/: inject_fault.py
telemetry/: telemetry_logger.py
